[package]
name = "kayto"
version = "0.1.2"
edition = "2024"
description = "Fast OpenAPI v2/v3 Parser & Code Generator"
license = "MIT"
repository = "https://github.com/vladislav-yemelyanov/kayto"
readme = "README.md"

[dependencies]
clap = "4.5.51"
reqwest = { version = "0.12.24", features = ["json"] }
rootcause = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
